--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch
-einops
-datasets
-scikit-learn
-tqdm
-transformer-lens
-transformers
-jaxtyping
+torch>=22.3.0
+einops>=20.8.0
+datasets>=2.19.1
+scikit-learn>=1.5.0
+tqdm>=4.66.4 
+transformer-lens>=1.17.0
+transformers>=4.41.1
+jaxtyping>=0.2.28 
